crates/rome_cli/tests/snapshots/main_commands_format/formatter_write.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file(s) in 6ms
```


