crates/rome_cli/tests/snapshots/main_commands_format/fs_error_read_only.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
test.js internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × cannot acquire write access to file in read-only filesystem
  
  ! This diagnostic was derived from an internal Rome error. Potential bug, please report it if necessary.
  

```

```block
Formatted 1 file(s) in <TIME>
```

```block
Skipped 1 file(s)
```


