crates/rome_cli/tests/snapshots/main_commands_format/ignore_vcs_ignored_file_via_cli.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `./.git`

```git

```

## `./.gitignore`

```gitignore

file2.js

```

## `file1.js`

```js
array.map((sentence) => sentence.split(" ")).flat();

```

## `file2.js`

```js
foo.call();


	bar.call();
```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


