crates/rome_cli/tests/snapshots/main_commands_format/line_width_parse_errors_negative.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      Couldn't parse `-1`: invalid digit found in string
  


```


