crates/rome_cli/tests/snapshots/main_commands_format/max_diagnostics.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 223
expression: content
---
# Emitted Messages

```block
The number of diagnostics exceeds the number allowed by Rome.
Diagnostics not shown: 50.
```


